# iliad-hacking

./: cross_compiling.html  cross_compiling.txt  setup_build_env.sh
connectionMgr/data/: Makefile.am  connectionMgr.rc
connectionMgr/inc/: Makefile.am  background.h  commonData.h  connectBackground.h  connectPing.h  connectScan.h  connectScreen.h  connectScreenData.h  connectScreenOptions.h  connectScreenProfiles.h  connectionMgr.h  connectionMgrData.h  connectionMgrLog.h  displayStatus.h  ecdc_err.h  editScreen.h  editScreenData.h  editScreenDialup.h  editScreenOverview.h  editScreenProfiles.h  editScreenProxy.h  editScreenSearch.h  editScreenStatic.h  editScreenWireless.h  editScreenWirelessExt.h  erbusy.h  gettext.h  gtkInfoItem.h  gtkProfileEntry.h  gtkProfileGroup.h  gtkSettingItem.h  gtkSettingItemTextEntry.h  languages.h  modemUtils.h  pagebar.h  pingThread.h  scanThread.h  system.h  toolbar.h  widgetUtils.h
connectionMgr/src/: Makefile.am  background.c  commonData.c  connectBackground.c  connectPing.c  connectScan.c  connectScreen.c  connectScreenData.c  connectScreenOptions.c  connectScreenProfiles.c  connectionMgr.c  connectionMgrData.c  displayStatus.c  editScreen.c  editScreenData.c  editScreenDialup.c  editScreenOverview.c  editScreenProfiles.c  editScreenProxy.c  editScreenSearch.c  editScreenStatic.c  editScreenWireless.c  editScreenWirelessExt.c  erbusy.c  gtkInfoItem.c  gtkProfileEntry.c  gtkProfileGroup.c  gtkSettingItem.c  gtkSettingItemTextEntry.c  languages.c  main.c  modemUtils.c  pagebar.c  pingThread.c  scanThread.c  system.c  toolbar.c  widgetUtils.c
contentLister/: Makefile.am  build_all_from_scratch.sh  configure.ac
contentLister/data/: Makefile.am  contentLister.rc
contentLister/inc/: Geometry.h  button.h  click.h  contentListerLog.h  control.h  control_share.h  cursor.h  displayUpdate.h  erConnect.h  erMSDisk.h  erMdsContent.h  erbusy.h  gethwid.h  gettext.h  gtkContentListItem.h  gtkDistListWnd.h  gtkErrorScreen.h  gtkMetadataWnd.h  gtkPincodeScreen.h  gtkSearchWnd.h  gtkSortWnd.h  history.h  icons.h  languages.h  lister.h  metadataStoreManager.h  pagebar.h  pincodeIdleTime.h  powerManager.h  programManager.h  regValue.h  search_files.h  sign.h  stack.h  system.h  tffs.h  timedids.h  toolbar.h  viewer.h
contentLister/po/: Makevars  POTFILES.in  contentlister.pot  de.po  en.po  es.po  fr.po  it.po  make_language_po_files.sh  make_po_template.sh  nl.po  ru.po  zh.po
contentLister/src/: Geometry.cpp  Makefile.am  button.c  click.c  control.c  control.cpp  control_share.c  control_share.cpp  cursor.c  cursor.cpp  displayUpdate.c  erConnect.c  erMSDisk.c  erMdsFs.c  erMdsXml.c  erbusy.c  gethwid.c  gtkContentListItem.c  gtkContentListItem.cpp  gtkDistListWnd.c  gtkErrorScreen.c  gtkMetadataWnd.c  gtkPincodeScreen.c  gtkSearchWnd.c  gtkSortWnd.c  history.c  icons.c  icons.cpp  languages.c  lister.c  lister.cpp  main.c  main.cpp  metadataStoreManager.c  pagebar.c  pincodeIdleTime.c  powerManager.c  programManager.c  search_files.c  sign.c  (+8 more)
displayMgr/: Makefile.am  build_all_from_scratch.sh  configure.ac
displayMgr/src/: Makefile.am  blank.c  displayEinkTypes.h  displayMgr.c  displayMgrClient.c
erbrowser/: build_all_from_scratch.sh  configure.ac
erbrowser/data/: browser.pot  make_language_po_files.sh  make_mo_files.sh  make_po_template.sh  nl.po
erbrowser/src/: Makefile.am  browser.cpp  browser.h  browserLog.h  browserSettings.cpp  browserSettings.h  browserTypes.h  contentLister.cpp  contentLister.h  displayUpdate.cpp  displayUpdate.h  erbusy.cpp  erbusy.h  find.cpp  find.h  indexFileHandler.cpp  indexFileHandler.h  ipcServer.cpp  ipcServer.h  languages.c  languages.h  main.cpp  main.h  metaDataParser.cpp  mozEmbedCallbacks.cpp  mozEmbedCallbacks.h  mozillaPreferences.cpp  mozillaPreferences.h  mozilla_api.cpp  mozilla_api.h  pagebar.cpp  pagebar.h  selection.cpp  selection.h  selectionFileHandler.cpp  selectionFileHandler.h  timingInfo.c  timingInfo.h  toolbar.cpp  toolbar.h
erbrowser/tst/: Makefile  browser.kdevelop  start_browser.sh  start_browser_on_pc.sh
erbusy/: configure.ac
erbusy/src/: Makefile.am  erbusy.c  erbusyd.c
liberdm/: Makefile.am  config.h.in  configure.ac  liberdm.pc.in
liberdm/doc/: Doxyfile.in
liberdm/include/: Makefile.am  connectionMgrConstants.h  display.h  erdm.h  erdmServer.h  erdminternal.h  erdmlog.h
liberdm/src/: Makefile.am  erdm.c  erdmServer.c  erdminternal.c
libergtk/data/: Makefile.am  libergtk.rc
libergtk/include/: Makefile.am  erGtkEntry.h  erGtkEntryFilter.h  erGtkSelectionGroup.h  erGtkSelectionList.h  erGtkToggleButton.h  ergtk.h  ergtklog.h
libergtk/src/: Makefile.am  erGtkEntry.c  erGtkEntryFilter.c  erGtkSelectionGroup.c  erGtkSelectionList.c  erGtkToggleButton.c
liberipc/include/: Makefile.am  eripc.h  eripcarinc.h  eripcbusyd.h  eripcclient.h  eripcconnect.h  eripccontentlister.h  eripceba.h  eripcicons.h  eripclog.h  eripcpagebar.h  eripcparser.h  eripcports.h  eripcpowermgr.h  eripcprivate.h  eripcsetup.h  eripctoolbar.h  eripcviewer.h
liberipc/src/: Makefile.am  eripc.c  eripcarinc.c  eripcbusyd.c  eripcclient.c  eripcconfig.h.in  eripcconnect.c  eripccontentlister.c  eripceba.c  eripcpagebar.c  eripcparser.c  eripcports.c  eripcpowermgr.c  eripcsetup.c  eripctoolbar.c  eripcviewer.c
libermanifest/src/: Makefile.am  ermanifest.c
liberregxml/inc/: Makefile.am  erreg.h  erregapi.h  erregapidefs.h  erregbasis.h  erregcfg.h  erreglog.h  erregnwprofiles.h  erregrwlock.h  erregtoolbar.h  erregtypes.h  erregtypes_f.h  erregxml.h  erregxsd.h  system.h
liberregxml/src/: Makefile.am  erreg.c  erregbasis.c  erregcfg.c  erregnwprofiles.c  erregrwlock.c  erregtoolbar.c  erregtypes.c  erregxml.c  erregxsd.c  system.c
liberregxml/tst/: Makefile.am  (+2 more)
liberscribble/: Makefile.am  configure.ac  liberscribble.pc.in
pcshareMgr/: Makefile.am  build_all_from_scratch.sh  configure.ac
powerMgr/: Makefile.am  build_all_from_scratch.sh  configure.ac
scribble/: Makefile.am  build_all_from_scratch.sh  configure.ac
settings/: Makefile.am  build_all_from_scratch.sh  configure.ac
(+1904 files in other folders)
