#the data (png files, pixmaps, resource file..) associated with the program 

pkgdata_DATA = connectionMgr.rc \
Bar_666_75_grey.png \
Bar_666_140_grey.png \
Bar_666_115_grey.png \
Bar_666_168_grey.png \
Bar_666_245_grey.png \
Bar_666_273_grey.png \
Bar_666_395_grey.png \
Bar_666_547_grey.png \
Btn_190_35_grey.png \
Btn_190_35_black.png \
cursor.png \
Itemfield.png \
Itemfield_selected.png \
Rootbar.png \
TextEntrybar_grey.png \
Titlebar_black.png \
transparent.png \
Referencematerials.png \
Icon_checked.png \
Icon_warning.png \
signal_strength0.png \
signal_strength1.png \
signal_strength2.png \
signal_strength3.png \
signal_strength4.png \
key.png

EXTRA_DIST   = $(pkgdata_DATA)
