#the data (png files, pixmaps, resource file..) associated with the program 

pkgdata_DATA = contentLister.rc \
		Newspaper.png \
		Contentbar_grey.png \
		Iconbar.png \
		Titlebar_black.png \
		cursor.png \
		cursor.bin \
		Icon_folder.png \
		Icon_unknown.png \
		Icon_books.png \
		Icon_documents.png \
		Icon_magazines.png \
		Icon_misc.png \
		Icon_mp3.png \
		Icon_newspapers.png \
		Icon_notes.png \
		Icon_photos.png \
		Icon_reviews.png \
		Icon_outbox.png \
		Icon_mobipocket.png \
		Info.png \
		Error.png \
		Warning.png \
		Prohibited.png \
		DontDisconnect-NW.png \
		BatteryLow.png \
		Shutdown.png \
		clicked_key.wav \
		clicked_key_discarded.wav \
		clicked_pen.wav \
		Bar_666_115_grey.png \
		Bar_666_230_grey.png \
		Bar_666_345_grey.png \
		Bar_666_666_grey.png \
		transparent.png \
		Btn_100_27_grey.png \
		Btn_100_27_selected.png \
		pincode_lock_background.png \
		pincode_background.png \
		keyboard_numbers.png \
		star_white.png \
		star_grey.png \
		ascending.png \
		ascending_selected.png \
		descending.png \
		descending_selected.png \
		deselected.png \
		selected.png \
		Rootbar.png

EXTRA_DIST   = $(pkgdata_DATA)
