#the data (png files, pixmaps, resource file..) associated with the program 
pkgdata_DATA = libergtk.rc				\
		Bar_666_27_black.png			\
		Bar_666_935_grey.png			\
		Btn_130_27_black.png			\
		Btn_130_27_transparent_blackborder.png	\
		Btn_130_27_transparent_greyborder.png \
		Btn_150_27_black.png			\
		Btn_150_27_transparent_blackborder.png	\
		Btn_150_27_transparent_greyborder.png \
		Btn_200_27_black.png			\
		Btn_200_27_transparent_blackborder.png	\
		Btn_200_27_transparent_greyborder.png \
		Btn_310_27_black.png			\
		Btn_310_27_transparent_blackborder.png	\
		Btn_640_44_black.png			\
		Btn_640_44_grey.png	\
		Checklist_normal.png			\
		Checklist_selected.png			\
		Radiobutton_normal.png			\
		Radiobutton_selected.png		\
		Transparent.png

EXTRA_DIST   = $(pkgdata_DATA)
