
source_h = ergtklog.h                   \
            ergtk.h                     \
            erGtkEntry.h                \
            erGtkSelectionGroup.h       \
            erGtkSelectionList.h        \
            erGtkToggleButton.h         \
            erGtkEntryFilter.h                

libergtkheaders_HEADERS = $(source_h)

libergtkheadersdir = $(pkgincludedir)

