
source_h =  eripc.h 			\
	    eripcarinc.h 		\
	    eripcbusyd.h 		\
	    eripcclient.h 		\
	    eripcconnect.h 		\
	    eripccontentlister.h 	\
	    eripceba.h			\
	    eripcicons.h 		\
	    eripcpagebar.h 		\
	    eripcpowermgr.h 		\
	    eripcsetup.h 		\
	    eripctoolbar.h 		\
	    eripcviewer.h

source_local_h = 			\
	    ../src/eripcconfig.h	\
	    eripclog.h			\
	    eripcparser.h		\
	    eripcports.h		\
	    eripcprivate.h

liberipcheaders_HEADERS = $(source_h) $(source_local_h)

liberipcheadersdir = $(pkgincludedir)
