source_h=erregtypes.h       \
		 erreg.h            \
		 erregcfg.h         \
		 erregrwlock.h      \
		 erregapi.h         \
		 erregapidefs.h     \
		 erregtypes_f.h     \
		 erregxml.h         \
		 erregxsd.h         \
		 erregbasis.h       \
		 erregtoolbar.h     \
		 erregnwprofiles.h  \
		 system.h           \
		 erreglog.h      

liberregxmldir=${pkgincludedir}
liberregxml_HEADERS=$(source_h)
