
source_h =  scb.h            \
            scbdoc.h         \
            scbpages.h       \
            scbpage.h        \
            scbstrokes.h     \
            scbstroke.h      \
            scbpoints.h      \
            scbpoint.h       \
            scblog.h         \
            scbconfig.h      \
            scbpath.h        \
            scbcolor.h       \
            scbtype.h        \
            driver.h         \
            scbxml.h         \
            scbmacro.h       \
            scbutil.h

liberscribbleheaders_HEADERS = $(source_h)

liberscribbleheadersdir = $(pkgincludedir)

