#the data (png files, pixmaps, resource file..) associated with the program 

pkgdata_DATA =	pagebar_cpicollapse.png \
		pagebar_cpi.png \
		pagebar_pagefield.png \
		pagebar_scrollright.png \
		pagebar_bookmark.png \
		pagebar_cpiexpand.png \
		pagebar_note.png \
		pagebar_scrollleft.png
			    
			   
EXTRA_DIST   = $(pkgdata_DATA)
